force-app/main/default/objects/Document_Content__c/Document_Content__c.object-meta.xml
<CustomObject>
    <description>Content Objects holds all the content of the Form (Child of Form Object)</description>
    <label>Document Content</label>
    <nameField>
        <label>Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Content</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>