force-app/main/default/objects/Document_Content__c/fields/Alignment__c.field-meta.xml
<CustomField>
    <fullName>Alignment__c</fullName>
    <description>To Specify alignment of page header/footer content.</description>
    <label>Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>