force-app/main/default/objects/Document_Content__c/fields/Background_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Background_Image_URL__c</fullName>
    <description>Template Image URL</description>
    <label>Background Image URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>