force-app/main/default/objects/Document_Content__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self LookUp as it has multiple content fields.</description>
    <label>Content</label>
    <referenceTo>Document_Content__c</referenceTo>
    <relationshipLabel>Document Content</relationshipLabel>
    <relationshipName>Contents</relationshipName>
    <type>Lookup</type>
</CustomField>