force-app/main/default/objects/Document_Content__c/fields/Content_Action__c.field-meta.xml
<CustomField>
    <fullName>Content_Action__c</fullName>
    <description>The user action whether the content can be Edited or not</description>
    <label>Content Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freezed</fullName>
            </value>
            <value>
                <fullName>Editable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>