force-app/main/default/objects/Document_Content__c/fields/Content_Font__c.field-meta.xml
<CustomField>
    <fullName>Content_Font__c</fullName>
    <description>Font for the Content</description>
    <label>Content Font</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arial</fullName>
            </value>
            <value>
                <fullName>Salesforce Sans</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>Verdana</fullName>
            </value>
            <value>
                <fullName>Tahoma</fullName>
            </value>
            <value>
                <fullName>Garamond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>