force-app/main/default/objects/Document_Content__c/fields/Content_Position__c.field-meta.xml
<CustomField>
    <fullName>Content_Position__c</fullName>
    <description>To Specify where the content should display on the page</description>
    <label>Content Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>