force-app/main/default/objects/Document_Content__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <description>To Differentiate body content other non body contents like Header, Footer, Page Break and Blank Page.</description>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Body</fullName>
                <default>true</default>
                <label>Body</label>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Footer</fullName>
            </value>
            <value>
                <fullName>Page Break</fullName>
            </value>
            <value>
                <fullName>Blank Page</fullName>
            </value>
            <value>
                <fullName>Related Records</fullName>
            </value>
            <value>
                <fullName>Custom Content</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
                <isActive>false</isActive>
                <label>Signature</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>