force-app/main/default/objects/Document_Content__c/fields/Corporate_Document__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to a document.</description>
    <label>Corporate Document</label>
    <referenceTo>Corporate_Document__c</referenceTo>
    <relationshipLabel>Document Content</relationshipLabel>
    <relationshipName>CorpContents</relationshipName>
    <type>Lookup</type>
</CustomField>