force-app/main/default/objects/Document_Content__c/fields/Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Date_Format__c</fullName>
    <description>Holds Date Format</description>
    <label>Date Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>