force-app/main/default/objects/Document_Content__c/fields/Document_Template__c.field-meta.xml
<CustomField>
    <fullName>Document_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to the document template object, in order to relate section content to the document template.</description>
    <label>Document Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Document Content</relationshipLabel>
    <relationshipName>TempContents</relationshipName>
    <type>Lookup</type>
</CustomField>