force-app/main/default/objects/Document_Content__c/fields/Embed_Images__c.field-meta.xml
<CustomField>
    <fullName>Embed_Images__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To  Allow or Restrict from uploading images to Template content</description>
    <label>Embed Images</label>
    <type>Checkbox</type>
</CustomField>