force-app/main/default/objects/Document_Content__c/fields/Enable_Landscape_Layout__c.field-meta.xml
<CustomField>
    <fullName>Enable_Landscape_Layout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the landscape page layout for the section if checked otherwise portrait page layout.</description>
    <label>Enable Landscape Layout</label>
    <type>Checkbox</type>
</CustomField>