force-app/main/default/objects/Document_Content__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <description>To get the Field-Type from the user and to render accordingly</description>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>tel</fullName>
                <label>Telephone</label>
            </value>
            <value>
                <fullName>Textarea</fullName>
            </value>
            <value>
                <fullName>CheckBox</fullName>
                <isActive>false</isActive>
                <label>CheckBox</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>