force-app/main/default/objects/Document_Content__c/fields/Footer_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Footer_Visibility__c</fullName>
    <description>To display the footer section in pages</description>
    <label>Footer Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Page Only</fullName>
            </value>
            <value>
                <fullName>First And Last Page</fullName>
            </value>
            <value>
                <fullName>All The Pages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>