force-app/main/default/objects/Document_Content__c/fields/Header_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Header_Visibility__c</fullName>
    <description>To Display the Header in which all pages</description>
    <label>Header Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Page Only</fullName>
            </value>
            <value>
                <fullName>First And Last Page</fullName>
            </value>
            <value>
                <fullName>All The Pages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>