force-app/main/default/objects/Document_Content__c/fields/Order_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Order_Sequence__c</fullName>
    <description>Order in which the section content should be displayed for a template or document.</description>
    <label>Order Sequence</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>