force-app/main/default/objects/Document_Content__c/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <description>Holds the line separated picklist values if Picklist is selected as Field Type.</description>
    <inlineHelpText>Enter line separated values if Picklist is selected as Field Type.</inlineHelpText>
    <label>Picklist Values</label>
    <type>TextArea</type>
</CustomField>