force-app/main/default/objects/Document_Content__c/fields/Placeholder_Content__c.field-meta.xml
<CustomField>
    <fullName>Placeholder_Content__c</fullName>
    <description>Placeholder Content which will be replaced with the user input in the section content.</description>
    <inlineHelpText>Placeholder Content which will be replaced with the user input in the section content(without brackets [ ]).</inlineHelpText>
    <label>Placeholder Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>