force-app/main/default/objects/Document_Content__c/fields/Query_JSON__c.field-meta.xml
<CustomField>
    <fullName>Query_JSON__c</fullName>
    <description>Query JSON contains the JSON structure for SOQL query.</description>
    <label>Query JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>