force-app/main/default/objects/Document_Content__c/fields/Reference_Field__c.field-meta.xml
<CustomField>
    <fullName>Reference_Field__c</fullName>
    <description>Reference Field name whose data will be replaced with placeholder content.</description>
    <label>Reference Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>