force-app/main/default/objects/Document_Content__c/fields/Section_Content__c.field-meta.xml
<CustomField>
    <fullName>Section_Content__c</fullName>
    <description>Holds the section contents in the form of html markup text.</description>
    <label>Section Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>