force-app/main/default/objects/Document_Content__c/fields/Section_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Section_External_Id__c</fullName>
    <description>Section External Id used to import the sections.</description>
    <externalId>true</externalId>
    <label>Section External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>