force-app/main/default/objects/Document_Content__c/fields/Section_Key__c.field-meta.xml
<CustomField>
    <fullName>Section_Key__c</fullName>
    <description>Contains section key generated from the front end. This field is made an external id, in order to be able to insert parent(section) and child(field) records in a single DML statement.</description>
    <externalId>true</externalId>
    <label>Section Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>