force-app/main/default/objects/Document_Content__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <description>The category or type of template.</description>
    <label>Template Type</label>
    <length>88</length>
    <type>Text</type>
</CustomField>