force-app/main/default/objects/Document_Content__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <description>Decides the visibility of header/footer content of the page to be on All The Pages or on First Page Only.</description>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Page Only</fullName>
            </value>
            <value>
                <fullName>All The Pages</fullName>
            </value>
            <value>
                <fullName>First And Last Page</fullName>
                <isActive>false</isActive>
                <label>First And Last Page</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>